--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node-cron": "^3.0.11",
     "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -21,6 +22,7 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
