--- a/infra/render.yaml
+++ b/infra/render.yaml
@@ -4,17 +4,42 @@
 
 services:
   - type: web
-    name: backend-api
-    # TODO: Add build and start commands
+    name: capstack-backend
+    env-vars:
+      - key: NODE_ENV
+        value: production
+      - key: PORT
+        value: 10000
+    plan: free
+    region: ohio
+    buildCommand: cd backend-api && npm install && npm run build
+    startCommand: cd backend-api && npm start
+    healthCheckPath: /health
 
   - type: web
-    name: ml-service
-    # TODO: Add build and start commands
+    name: capstack-ml
+    env: python
+    plan: free
+    region: ohio
+    buildCommand: cd ml-service && pip install -r requirements.txt
+    startCommand: cd ml-service && uvicorn app.main:app --host 0.0.0.0 --port 10000
 
   - type: web
-    name: frontend
-    # TODO: Add build and start commands
+    name: capstack-frontend
+    env: node
+    plan: free
+    region: ohio
+    buildCommand: cd frontend && npm install && npm run build
+    startCommand: cd frontend && npm start
+    envVars:
+      - key: NEXT_PUBLIC_API_URL
+        fromService:
+          name: capstack-backend
+          type: web
+          property: host
 
 databases:
   - name: capstack-db
-    # TODO: Configure PostgreSQL database
+    databaseName: capstack
+    plan: free
+    region: ohio
